2002-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,objs/flags.h,drag.cc:  In_dungeon flag.
	Also don't assume theft if inside a dungeon.
	* shapeinf.{cc,h},combat.cc,effects.cc:  Not_blocked flag for
	weapons and ammo.

2002-07-26  Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* README.Qtopia: updated
	* imagewin/ibuf8.cc: added a test to prevent fast copy on the zaurus
	* configure.in: added test for $host_vendor under the linux clause
	* shapes/monstinf.*: renamed "arm" into "armur" as "arm" is reserved
	
2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/exult_studio.xml: updated
	* docs/exult_studio.html, exult_studio.txt: updated
	
2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* exult.cc: little correction of the --help screen (--bg, --si instead of 
	  -bg -si)
	* Readme, FAQ: updated.
	* docs/xml/docs.xml, faq.xml: updated
	* docs/readme.html, faq.html: updated
	
2002-07-24  Jeff Freedman  <jeff@amy.nerble.net>

	* shapeid.cc,vgafile.h,glshape.cc:  Translucent shapes supported
	in OpenGL.
	May not look entirely right, as I had to guess at the colors (in
	'shapeid.cc'; look for 'blends'.)

2002-07-23  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* imagewin/imagebuf.h (public): Xform_palette is now a class
	containing the color that's being blended.

2002-07-23  Tristan Tarrant  <nadir@users.sourceforge.net>
	* keyactions.*: renamed functions to use north/south/east/west and
	  added diagonals (north-west, etc.), implemented running
	* data/bg/defaultkeys.txt data/si/defaultkeys.txt: added mapping
	  keypad keys for all 8 directions, added shift-arrows and
	  shift-keypad for running

2002-07-23  Jeff Freedman  <jeff@amy.nerble.net>

	* imagewin/iwin8.h,etc:  fill8() works in OpenGL.

2002-07-22  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/glshape.cc (GL_manager): Paint_image() used for images
	larger than 256x256.  Also, units changed from tiles to 'pixels'.
