@@ -1,3 +1,8 @@
+2002-07-27  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* objs/barge.cc (Barge_object): Exit barge mode when you go into
+	combat, and lower sails when you exit barge mode.
+
 2002-07-26  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* usecode/intrinsics.cc,objs/flags.h,drag.cc:  In_dungeon flag.
